[package]
name = "libicmp"
version = "0.1.1"
description = "ICMP protocol support and implementations"
authors = ["Tyler Julian <trjulian@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/APTy/icmp"

[lib]
name = "libicmp"
path = "src/lib.rs"

[[bin]]
name = "icmp"
path = "src/main.rs"


[dependencies]
nix = "0.7.0"
libc = "0.2"
rand = "0.3"
byteorder = "1.0.0"
